--- a/src/app/core/rooms/suite/suite.component.html
+++ b/src/app/core/rooms/suite/suite.component.html
@@ -1,5 +1,5 @@
 <section>
-    <div class="container-fluid d-flex p-5 align-items-center column-gap-5">
+    <div class="container-fluid d-flex p-4 align-items-center column-gap-5">
 
         <div id="slide" class="carousel slide" data-bs-ride="carousel">
             <ul class="carousel-indicators">
@@ -18,7 +18,7 @@
                     <img ngSrc="../../../../assets/rooms/suite/suite-3.png" width="600" height="300">
                 </div>
             </div>
-            <div class="carousel-control-prev ms-3 carousel-btn my-auto" type="button" data-bs-target="#slide"
+            <div class="carousel-control-prev ms-3 bg-dark carousel-btn my-auto" type="button" data-bs-target="#slide"
                 data-bs-slide="perv">
                 <span class="carousel-control-prev-icon"></span>
             </div>
