--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,7 +30,7 @@
                 <a [routerLink]="['contact']" class="nav-link" routerLinkActive="nav-active" >LOCATION & CONTACT</a>
             </li>
             <li class="nav-item" >
-                <a class="btn btn-outline-primary py-2 px-3 rounded-0" >Book Now</a>
+                <a class="btn btn-outline-primary py-2 px-3" >Book Now</a>
             </li>
         </ul>
 
