--- a/src/app/core/dining/dining.component.html
+++ b/src/app/core/dining/dining.component.html
@@ -1,1 +1,137 @@
-<p>dining works!</p>
+<section class="mb-sec">
+    <div class="container-fluid dining-img my-3">
+        <h2 class="text-light">
+            Hungry or Thirsty, <br>
+            Look no further
+        </h2>
+        <p class="text-light">
+            Anytime of the day, indulge in the various dining options. <br>
+            The all-day dining Inya Lake restaurant offers Asian and Western fare, <br>
+            while the Poolside bar will cater for your cravings with light meals, <br>
+            cool drinks and cocktails to the Deli shop with fresh pastries and cakes for a sweet finishing touch.
+        </p>
+    </div>
+</section>
+
+<section class="mb-sec">
+    <div class="container-fluid d-flex p-5 align-items-center column-gap-5">
+
+        <div id="slide" class="carousel slide" data-bs-ride="carousel">
+            <ul class="carousel-indicators">
+                <li class="active" data-bs-target="#slide" data-bs-slide-to="0"></li>
+                <li data-bs-target="#slide" data-bs-slide-to="1"></li>
+                <li data-bs-target="#slide" data-bs-slide-to="2"></li>
+            </ul>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img ngSrc="../../../assets/dining/restaurants/restaurant-1.png" width="800" height="400">
+                </div>
+                <div class="carousel-item">
+                    <img ngSrc="../../../assets/dining/restaurants/restaurant-2.png" width="800" height="400">
+                </div>
+                <div class="carousel-item">
+                    <img ngSrc="../../../assets/dining/restaurants/restaurant-3.png" width="800" height="400">
+                </div>
+            </div>
+            <div class="carousel-control-prev ms-3 bg-dark carousel-btn my-auto" type="button" data-bs-target="#slide"
+                data-bs-slide="perv">
+                <span class="carousel-control-prev-icon"></span>
+            </div>
+            <button class="carousel-control-next bg-dark me-3 carousel-btn my-auto" type="button"
+                data-bs-target="#slide" data-bs-slide="next">
+                <span class="carousel-control-next-icon"></span>
+            </button>
+        </div>
+
+        <div class="room-text-container">
+            <h1>ATLANTIS RESTAURANTS</h1>
+            <p class="text-gray">Prepare all five senses for an experience that will raise the expectations of what a
+                culinary destination
+                should be. The world’s most renowned chefs and the region’s most awarded Michelin stars in one
+                destination, will bring their individual mastery to Dubai.</p>
+        </div>
+    </div>
+</section>
+
+<section class="mb-sec">
+    <div class="container-fluid d-flex p-5 align-items-center column-gap-5">
+
+        <div class="room-text-container">
+            <h1>ATLANTIS POOLSIDE BARS</h1>
+            <p class="text-gray">Prepare all five senses for an experience that will raise the expectations of what a
+                culinary destination
+                should be. The world’s most renowned chefs and the region’s most awarded Michelin stars in one
+                destination, will bring their individual mastery to Dubai.</p>
+        </div>
+
+        <div id="poolSlide" class="carousel slide" data-bs-ride="carousel">
+            <ul class="carousel-indicators">
+                <li class="active" data-bs-target="#poolSlide" data-bs-slide-to="0"></li>
+                <li data-bs-target="#poolSlide" data-bs-slide-to="1"></li>
+                <li data-bs-target="#poolSlide" data-bs-slide-to="2"></li>
+            </ul>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img ngSrc="../../../assets/dining/bars/poolside-1.png" width="800" height="400">
+                </div>
+                <div class="carousel-item">
+                    <img ngSrc="../../../assets/dining/bars/poolside-2.png" width="800" height="400">
+                </div>
+                <div class="carousel-item">
+                    <img ngSrc="../../../assets/dining/bars/poolside-3.png" width="800" height="400">
+                </div>
+            </div>
+            <div class="carousel-control-prev ms-3 bg-dark carousel-btn my-auto" type="button" data-bs-target="#poolSlide"
+                data-bs-slide="perv">
+                <span class="carousel-control-prev-icon"></span>
+            </div>
+            <button class="carousel-control-next bg-dark me-3 carousel-btn my-auto" type="button"
+                data-bs-target="#poolSlide" data-bs-slide="next">
+                <span class="carousel-control-next-icon"></span>
+            </button>
+        </div>
+        
+    </div>
+</section>
+
+<section>
+    <div class="container-fluid d-flex p-5 align-items-center column-gap-5">
+
+        <div id="barSlide" class="carousel slide" data-bs-ride="carousel">
+            <ul class="carousel-indicators">
+                <li class="active" data-bs-target="#barSlide" data-bs-slide-to="0"></li>
+                <li data-bs-target="#barSlide" data-bs-slide-to="1"></li>
+                <li data-bs-target="#barSlide" data-bs-slide-to="2"></li>
+            </ul>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img ngSrc="../../../assets/dining/bars/bar-1.png" width="800" height="400">
+                </div>
+                <div class="carousel-item">
+                    <img ngSrc="../../../assets/dining/bars/bar-2.png" width="800" height="400">
+                </div>
+                <div class="carousel-item">
+                    <img ngSrc="../../../assets/dining/bars/bar-3.png" width="800" height="400">
+                </div>
+            </div>
+            <div class="carousel-control-prev ms-3 bg-dark carousel-btn my-auto" type="button"
+                data-bs-target="#barSlide" data-bs-slide="perv">
+                <span class="carousel-control-prev-icon"></span>
+            </div>
+            <button class="carousel-control-next bg-dark me-3 carousel-btn my-auto" type="button"
+                data-bs-target="#barSlide" data-bs-slide="next">
+                <span class="carousel-control-next-icon"></span>
+            </button>
+        </div>
+
+
+        <div class="room-text-container">
+            <h1>ATLANTIS BARS</h1>
+            <p class="text-gray">A lounge terrace overlooking the fire and water fountains of Atlantis The Royal where
+                you can sip eclectic cocktails and nibbles. Located in Atlantis The Royal.</p>
+        </div>
+
+    </div>
+</section>
+
+<copy-right></copy-right>
