--- a/src/app/core/facilities/facilities.component.html
+++ b/src/app/core/facilities/facilities.component.html
@@ -1,1 +1,131 @@
-<p>facilities works!</p>
+<section class="mb-sec">
+    <div class="container-fluid facility-img my-3">
+        <h2 class="text-light">
+            Everything You Need <br>
+            is at Inya Lake Hotel
+        </h2>
+        <p class="text-light">
+            Enjoy the extensive facilities at Inya Lake Hotel from an open-air swimming pool, <br>
+            a fully-equipped gym, two tennis courts, 4 restaurants and bars to meetings venues and catering services.
+        </p>
+    </div>
+</section>
+
+<section class="mb-sec">
+    <div class="container-fluid d-flex p-5 align-items-center column-gap-5">
+
+        <div id="slide" class="carousel slide" data-bs-ride="carousel">
+            <ul class="carousel-indicators">
+                <li class="active" data-bs-target="#slide" data-bs-slide-to="0"></li>
+                <li data-bs-target="#slide" data-bs-slide-to="1"></li>
+                <li data-bs-target="#slide" data-bs-slide-to="2"></li>
+            </ul>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img ngSrc="../../../assets/facility/pools/pool-2.png" width="800" height="400">
+                </div>
+                <div class="carousel-item">
+                    <img ngSrc="../../../assets/facility/pools/pool-3.png" width="800" height="400">
+                </div>
+                <div class="carousel-item">
+                    <img ngSrc="../../../assets/facility/pools/pool-4.png" width="800" height="400">
+                </div>
+            </div>
+            <div class="carousel-control-prev ms-3 bg-dark carousel-btn my-auto" type="button" data-bs-target="#slide"
+                data-bs-slide="perv">
+                <span class="carousel-control-prev-icon"></span>
+            </div>
+            <button class="carousel-control-next bg-dark me-3 carousel-btn my-auto" type="button"
+                data-bs-target="#slide" data-bs-slide="next">
+                <span class="carousel-control-next-icon"></span>
+            </button>
+        </div>
+
+        <div class="room-text-container">
+            <h1>ATLANTIS POOLS</h1>
+            <p class="text-gray">You're spoiled for choice when it comes to swimming at Atlantis, with two huge pools,
+                two private beaches, and endless watersports.</p>
+        </div>
+    </div>
+</section>
+
+<section class="mb-sec">
+    <div class="container-fluid d-flex p-5 align-items-center column-gap-5">
+
+
+        <div class="room-text-container">
+            <h1>ATLANTIS GYMS</h1>
+            <p class="text-gray">You're spoiled for choice when it comes to swimming at Atlantis, with two huge pools,
+                two private beaches, and endless watersports.</p>
+        </div>
+
+        <div id="gymSlide" class="carousel slide" data-bs-ride="carousel">
+            <ul class="carousel-indicators">
+                <li class="active" data-bs-target="#gymSlide" data-bs-slide-to="0"></li>
+                <li data-bs-target="#gymSlide" data-bs-slide-to="1"></li>
+                <li data-bs-target="#gymSlide" data-bs-slide-to="2"></li>
+            </ul>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img ngSrc="../../../assets/facility/gyms/gym-1.png" width="800" height="400">
+                </div>
+                <div class="carousel-item">
+                    <img ngSrc="../../../assets/facility/gyms/gym-2.png" width="800" height="400">
+                </div>
+                <div class="carousel-item">
+                    <img ngSrc="../../../assets/facility/gyms/gym-3.png" width="800" height="400">
+                </div>
+            </div>
+            <div class="carousel-control-prev ms-3 bg-dark carousel-btn my-auto" type="button"
+                data-bs-target="#gymSlide" data-bs-slide="perv">
+                <span class="carousel-control-prev-icon"></span>
+            </div>
+            <button class="carousel-control-next bg-dark me-3 carousel-btn my-auto" type="button"
+                data-bs-target="#gymSlide" data-bs-slide="next">
+                <span class="carousel-control-next-icon"></span>
+            </button>
+        </div>
+
+    </div>
+</section>
+
+<section>
+    <div class="container-fluid d-flex p-5 align-items-center column-gap-5">
+
+
+        <div id="tennisSlide" class="carousel slide" data-bs-ride="carousel">
+            <ul class="carousel-indicators">
+                <li class="active" data-bs-target="#tennisSlide" data-bs-slide-to="0"></li>
+                <li data-bs-target="#tennisSlide" data-bs-slide-to="1"></li>
+                <li data-bs-target="#tennisSlide" data-bs-slide-to="2"></li>
+            </ul>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img ngSrc="../../../assets/facility/sports/tennis-1.png" width="800" height="400">
+                </div>
+                <div class="carousel-item">
+                    <img ngSrc="../../../assets/facility/sports/tennis-2.png" width="800" height="400">
+                </div>
+                <div class="carousel-item">
+                    <img ngSrc="../../../assets/facility/sports/tennis-3.png" width="800" height="400">
+                </div>
+            </div>
+            <div class="carousel-control-prev ms-3 bg-dark carousel-btn my-auto" type="button"
+                data-bs-target="#tennisSlide" data-bs-slide="perv">
+                <span class="carousel-control-prev-icon"></span>
+            </div>
+            <button class="carousel-control-next bg-dark me-3 carousel-btn my-auto" type="button"
+                data-bs-target="#tennisSlide" data-bs-slide="next">
+                <span class="carousel-control-next-icon"></span>
+            </button>
+        </div>
+
+
+        <div class="room-text-container">
+            <h1>ATLANTIS TENNIS</h1>
+            <p class="text-gray">You're spoiled for choice when it comes to swimming at Atlantis, with two huge pools,
+                two private beaches, and endless watersports.</p>
+        </div>
+    </div>
+</section>
+<copy-right></copy-right>
