--- a/src/app/core/gallery/gallery.component.html
+++ b/src/app/core/gallery/gallery.component.html
@@ -1,1 +1,51 @@
-<p>gallery works!</p>
+<section>
+    <h1 class="text-center my-3" >ATLANTIS GALLERY</h1>
+    <div class="d-flex flex-wrap justify-content-center column-gap-5 row-gap-5 my-4">
+
+        @defer (on viewport) {
+            <img ngSrc="../../../assets/home/hotel/hotel-3.png" width="300" height="200">
+
+        <img ngSrc="../../../assets/home/hotel/hotel-2.png" width="300" height="200">
+
+        <img ngSrc="../../../assets/home/hotel/hotel-1.png" width="300" height="200">
+
+        <img ngSrc="../../../assets/home/hotel/hotel-4.png" width="300" height="200">
+
+        <img ngSrc="../../../assets/home/dining/dining-1.png" width="300" height="200">
+
+        <img ngSrc="../../../assets/home/dining/dining-2.png" width="300" height="200">
+
+        <img ngSrc="../../../assets/home/dining/dining-3.png" width="300" height="200">
+
+        <img ngSrc="../../../assets/home/room/room-1.png" width="300" height="200">
+        
+        <img ngSrc="../../../assets/home/room/room-2.png" width="300" height="200">
+
+        <img ngSrc="../../../assets/home/room/room-3.png" width="300" height="200">
+
+        <img ngSrc="../../../assets/home/room/room-4.png" width="300" height="200">
+
+        <img ngSrc="../../../assets/facility/pools/pool-2.png" width="300" height="200">
+
+        <img ngSrc="../../../assets/facility/pools/pool-3.png" width="300" height="200">
+
+        <img ngSrc="../../../assets/facility/pools/pool-4.png" width="300" height="200">
+
+        <img ngSrc="../../../assets/facility/sports/tennis-1.png" width="300" height="200">
+
+        <img ngSrc="../../../assets/facility/sports/tennis-2.png" width="300" height="200">
+
+        <img ngSrc="../../../assets/facility/sports/tennis-3.png" width="300" height="200">
+
+        <img ngSrc="../../../assets/facility/gyms/gym-1.png" width="300" height="200">
+
+        <img ngSrc="../../../assets/facility/gyms/gym-2.png" width="300" height="200">
+
+        <img ngSrc="../../../assets/facility/gyms/gym-3.png" width="300" height="200">
+        }@placeholder {
+            <div class="spinner-border" ></div>
+        }
+
+    </div>
+</section>
+<copy-right></copy-right>
