--- a/src/app/core/location-contact/location-contact.component.html
+++ b/src/app/core/location-contact/location-contact.component.html
@@ -1,1 +1,36 @@
-<p>location-contact works!</p>
+<section>
+    <div class="container-fluid d-flex my-3 align-items-center justify-content-between">
+
+        <img ngSrc="../../../assets/location/map.png" width="800" height="570">
+
+        <div class="">
+            <h1>ATLANTIS HOTEL</h1>
+            <p class="text-gray">Crescent Rd - The Palm Jumeirah - Dubai - United Arab Emirates</p>
+
+            <p>Write us at <a
+                    href="mailto:thepalm.reservations@atlantisdubai.com">thepalm.reservations&#64;atlantisdubai.com</a>
+                or use the form below. </p>
+
+            <form>
+                <div class="mb-3">
+                    <label for="name" class="form-label mb-1">Name:</label>
+                    <input type="text" class="form-control" placeholder="Enter Name">
+                </div>
+                <div class="mb-3">
+                    <label for="email" class="form-label mb-1">Email:</label>
+                    <input type="text" class="form-control" placeholder="Enter Email">
+                </div>
+                <div class="mb-4">
+                    <label for="message" class="form-label mb-1">Message:</label>
+                    <textarea  class="form-control" placeholder="Enter Message"></textarea>
+                </div>
+                <div class="float-end" > 
+                    <button class="btn btn-sm btn-primary"  >Send Your Enquiry</button>
+                </div>
+            </form>
+
+        </div>
+    </div>
+</section>
+
+<copy-right></copy-right>
