--- a/src/app/core/dining/dining.component.html
+++ b/src/app/core/dining/dining.component.html
@@ -24,13 +24,13 @@
             </ul>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="/dist/hotel-web/browser/assets/dining/restaurants/restaurant-1.png" width="800" height="400">
+                    <img ngSrc="../../../../dist/hotel-web/browser/assets/dining/restaurants/restaurant-1.png" width="800" height="400">
                 </div>
                 <div class="carousel-item">
-                    <img ngSrc="../../../assets/dining/restaurants/restaurant-2.png" width="800" height="400">
+                    <img ngSrc="../../../../dist/hotel-web/browser/assets/dining/restaurants/restaurant-2.png" width="800" height="400">
                 </div>
                 <div class="carousel-item">
-                    <img ngSrc="../../../assets/dining/restaurants/restaurant-3.png" width="800" height="400">
+                    <img ngSrc="../../../../dist/hotel-web/browser/assets/dining/restaurants/restaurant-3.png" width="800" height="400">
                 </div>
             </div>
             <div class="carousel-control-prev ms-3 bg-dark carousel-btn my-auto" type="button" data-bs-target="#slide"
