test update img

--- a/src/app/core/dining/dining.component.html
+++ b/src/app/core/dining/dining.component.html
@@ -24,7 +24,7 @@
             </ul>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img ngSrc="../../../assets/dining/restaurants/restaurant-1.png" width="800" height="400">
+                    <img ngSrc="/assets/dining/restaurants/restaurant-1.png" width="800" height="400">
                 </div>
                 <div class="carousel-item">
                     <img ngSrc="../../../../dist/hotel-web/browser/assets/dining/restaurants/restaurant-2.png" width="800" height="400">
